<resources>
    <string name="app_name">Cary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">login</string>
    <string name="sign_up_text">sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="existing_account_text">Already have an account?</string>
    <string name="login_now_text">Login now</string>
    <string name="setting_text">Settings</string>
    <string name="complete_profile_text">complete your profile</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="less_than_one">Less than 1 km</string>
    <string name="formatted_distance">%1$d Km Away</string>
    <string name="formatted_prices">$%1$s-%2$s/hr</string>
    <string name="formatted_max_distance">%1$d km</string>
    <string name="formatted_experience">%1$s yrs exp</string>
    <string name="formatted_age">%1$d yrs old</string>
    <string name="formatted_full_name">%1$s %2$s</string>
    <string name="formatted_rate">Rate this %1$s</string>
    <string name="I_am">I am &#8230;</string>
    <string name="baby_sitter">Baby Sitter</string>
    <string name="pet_care">Pet Care</string>
    <string name="primary_need">Choose your primary need</string>
    <string name="child_care">Child Care</string>
    <string name="house_keeping">House Keeping</string>
    <string name="senior_care">Senior Care</string>
    <string name="tutoring">Tutoring</string>
    <string name="special_needs">Special needs</string>
    <string name="pet_sitter">Pet Sitter</string>
    <string name="house_keeper">House Keeper</string>
    <string name="tutor">Tutor</string>
    <string name="special_need_caregiver">Special needs caregiver</string>
    <string name="address">Address</string>
    <string name="finish">Finish</string>
    <string name="full_time">Full-Time</string>
    <string name="part_time">Part-Time</string>
    <string name="job_type">Job Type</string>
    <string name="experience">Experience</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="price_hr">Price/hr</string>
    <string name="phone_number">Phone number</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="i_m_available">I\'m Available</string>
    <string name="job_requirements">Job Requirements</string>
    <string name="active">Active</string>
    <string name="not_active">Not Active</string>
    <string name="searching_status">Searching Status</string>
    <string name="enter_email_pass">Enter your email and password</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="fill_all_fields">Please fill in all fields</string>
    <string name="check_password">Please check your password</string>
    <string name="verify_email">Please verify your email</string>
    <string name="registration_message">Registered successfully, please check your email for verification</string>
    <string name="something_wrong_message">Something wrong happened</string>
    <string name="already_signed_up">You have already signed up</string>
    <string name="need_permission_title">Permission needed</string>
    <string name="need_permission_text">The app needs your permission to access location</string>
    <string name="gallery_permission_text">The app needs your permission to access photos</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="check_reset">Check your email and reset the password</string>
    <string name="fail_reset_link">Fail to send the reset link</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="reset_text">Enter your email address and we\'ll send you a link to reset your password</string>
    <string name="about">About</string>
    <string name="symbol">-</string>
    <string name="edit_profile">Edit profile</string>
    <string name="share">Share</string>
    <string name="licences">Licences</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_services">Terms of services</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="update_profile">Update Profile</string>
    <string name="basic_info">Basic info</string>
    <string name="contact_info">Contact info</string>
    <string name="job">Job</string>
    <string name="saved">Saved</string>
    <string name="tell_something">Tell something about you, your skills and experiences&#8230;</string>
    <string name="age_range">Age Range</string>
    <string name="invalid_birth_date">Invalid birth date</string>
    <string name="age_under_18">Age under 18</string>
    <string name="max_distance">Max distance</string>
    <string name="filter">Filter</string>
    <string name="no_gender_selected">No gender selected</string>
    <string name="no_job_type_selected">No job type selected</string>
    <string name="invalid_age_range">Invalid age range</string>
    <string name="failed_to_send_email">"Failed to send verification email"</string>
    <string name="failed_to_sign_in">Failed to sign in</string>
    <string name="missing_price">Please fill in prices fields</string>
    <string name="invalid_prices">Invalid prices</string>
    <string name="missing_availability">Are you available ?</string>
    <string name="missing_first_name">Please enter your first name</string>
    <string name="missing_last_name">Please enter your last name</string>
    <string name="missing_address">Please enter your address</string>
    <string name="missing_phone_number">Please enter your phone number</string>
    <string name="missing_review">Please write a review</string>
    <string name="missing_offer_title">Please add a title</string>
    <string name="missing_offer_description">Please add offer requirements</string>
    <string name="invalid_password">Password must contain a minimum of eight without empty space</string>
    <string name="premium">Premium</string>
    <string name="show_me">Show Me</string>
    <string name="only_premiums">Only premiums</string>
    <string name="my_primary_need">Primary need</string>
    <string name="rating_and_reviews">Rating and reviews</string>
    <string name="post">POST</string>
    <string name="rate">Rate</string>
    <string name="write_a_review">Write a review</string>
    <string name="describe_your_experience">Describe your experience</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="title_of_the_job">Title of the job</string>
    <string name="description">Description</string>
    <string name="describe_the_job">Describe the job you need</string>
    <string name="job_details">Job details</string>
    <string name="status">Status</string>
    <string name="posted_by">Posted by</string>
    <string name="publisher_profile">Publisher Profile</string>
    <string name="inbox">Inbox</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_message">send message</string>
    <string name="no_reviews_found">No Reviews Found</string>
    <string name="no_messages_found">No Messages Found</string>
    <string name="location_required_error">Location required</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="delete_account_text">Delete Account ?</string>
    <string name="delete_text_confirmation">Are you sure you want to delete your account ?</string>
    <string name="confirm_text">confirm</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="account_deleted">Your account has been deleted successfully</string>
    <string name="review_sent">Your review has been sent</string>
    <string name="no_data_found">No Data Found</string>
    <string name="care_giver">Care Giver</string>
    <string name="care_seeker">Care Seeker</string>
    <string name="terminate">Terminate</string>
    <string name="no_internet">No internet connection</string>
    <string name="can_not_connect">Can\'t connect right now</string>
    <string name="msg_notification_channel_id">101</string>
    <string name="msg_notification_title">New Message</string>
    <string name="msg_notification_channel_name">Messages Notification</string>
    <string name="fcm_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_notification_channel_name" translatable="true">App Notification</string>
    <string name="are_you">Are You ?</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="you_re_offline">You\'re offline</string>
    <string name="retry">Retry</string>
    <string name="no_new_profiles_around_you">No results found</string>
    <string name="no_new_offers_around_you">No offers around you</string>
    <string name="adjust_filter">Try to adjust your filter options</string>
    <string name="rate_child_sitter">Rate this Child Sitter</string>
    <string name="rate_pet_sitter">Rate this Pet Sitter</string>
    <string name="rate_house_keeping">Rate this House Keeper</string>
    <string name="rate_senior_sitter">Rate this Senior Sitter</string>
    <string name="rate_tutor">Rate this Tutor</string>
    <string name="rate_special_needs">Rate this special needs caregiver</string>
    <string name="premium_description1">Premium Offer!</string>
    <string name="premium_description_2">Get All the Premium Features</string>
    <string name="be_premium">Go Premium</string>
    <string name="premium_plus">Premium Plus</string>
    <string name="sub_activation_text">Activation of this premium account will grant access to all locked content on our app</string>
    <string name="choose_a_plan">Choose a plan</string>
    <string name="use_condition_text">By tapping continue, your payment will be charged to your Google Play account, and your subscription will automatically renew for the same package length at the same price until you cancel in settings in the Play store at least 24 hours prior to the end of the current period. By tapping continue you agree to our Privacy Policy and Terms. </string>
    <string name="continue_text">continue</string>
    <string name="valid_purchase">You purchase has been validated</string>
    <string name="subscription_expired">Your subscription has expired</string>
    <string name="subscription_renewed">Your subscription has been renewed</string>
    <string name="subscription_grace_period">To prevent disruptions to your account, navigate to the Google Play subscription settings to fix your payment on Google Play</string>
    <string name="subscription_on_hold">There is  a problem with your subscription. Go to the Google Play subscription settings to fix your payment method</string>
    <string name="subscription_recovered">Your form of payment was updated, and your subscription has been recovered</string>
    <string name="subscription_restarted">Your subscription has been restarted</string>
</resources>