<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".caregiver.job.GiverJob">
    <data>
        <variable
            name="viewModel"
            type="com.projects.mycompany.cary.caregiver.job.GiverJobViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/giver_job_constraint"
        android:background="@android:color/background_light"
        >

        <TextView
            android:id="@+id/textView7"
            style="@style/edit_title_style"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/price_hr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/min_price"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_border"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:hint="@string/min"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/title_color_2"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/max_price"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/max_price"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_border"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:hint="@string/max"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/title_color_2"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/min_price"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/textView9"
            style="@style/edit_title_style"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/experience"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/min_price"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView10"
            style="@style/edit_title_style"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/job_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/experience_spinner" />

        <RadioGroup
            android:id="@+id/jobTypeRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="0.0">

            <RadioButton
                android:id="@+id/fullTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/full_time"
                app:setFullTimeCheck="@{viewModel.currentCareGiver}"
                android:textColor="@color/title_color_2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/partTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/part_time"
                app:setPartTimeCheck="@{viewModel.currentCareGiver}"
                android:textColor="@color/title_color_2"
                android:textSize="16sp" />
        </RadioGroup>

        <Spinner
            android:id="@+id/experience_spinner"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:setExperienceJob="@{viewModel.currentCareGiver}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView6"
            style="@style/edit_title_style"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/i_m_available"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jobTypeRadioGroup"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/availabilityRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0">

            <RadioButton
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/title_color_2"
                android:textSize="16sp"
                app:setAvailabilityYes="@{viewModel.currentCareGiver}"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/title_color_2"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                app:setAvailabilityNo="@{viewModel.currentCareGiver}"
                android:text="@string/no" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
