<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".careseeker.offerdetails.OfferDetails">
    <data>
        <variable
            name="viewModel"
            type="com.projects.mycompany.cary.careseeker.offerdetails.OfferDetailsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/job_details_layout">

            <TextView
                android:id="@+id/category_text"
                style="@style/edit_title_style"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:text="@string/category"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/offer_detailsprogress"
                app:layout_constraintVertical_bias="0.0" />

            <Spinner
                android:id="@+id/job_details_spinner"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:jobDetails="@{viewModel.MCurrentCareSeeker}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_text"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/title_text"
                style="@style/edit_title_style"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/active_text"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/job_title_edit"
                style="@style/edit_fields_style"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:hint="@string/title_of_the_job"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@{viewModel.MCurrentCareSeeker.offerTitle}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/description_text"
                style="@style/edit_title_style"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:text="@string/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/job_title_edit"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/job_description_edit"
                style="@style/about_edit_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/describe_the_job"
                android:inputType="textMultiLine"
                android:maxLength="2000"
                android:lineSpacingMultiplier="1.2"
                android:text="@{viewModel.MCurrentCareSeeker.offerDescription}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_text"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/status_text"
                style="@style/edit_title_style"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/status"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/job_details_spinner"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/active_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textColor="@color/title_color_2"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/active"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/status_text"
                app:layout_constraintVertical_bias="0.0" />

            <Switch
                android:id="@+id/status_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:offerStatus="@{viewModel.MCurrentCareSeeker}"
                app:layout_constraintBaseline_toBaselineOf="@+id/active_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/active_text" />

            <ProgressBar
                android:id="@+id/offer_detailsprogress"
                style="?android:attr/progressBarStyle"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>